# minesweeper

./: CMakeLists.txt  README.md
src/: Colors.h  Config.cpp  Config.h  Game.cpp  Game.h  GameHandler.cpp  GameHandler.h  Generation.cpp  Screen.cpp  Screen.h  main.cpp  solve.cpp  utils.cpp  utils.h
